[package]
edition = "2021"
name = "proc-opt"
version = "0.1.2"
license = "MIT"
description = "WIP: Process/Job scheduling optimization library.."
keywords = ["schrage", "carlier", "rpq", "optimization", "scheduling"]
categories = ["algorithms"]
readme = "README.md"
repository = "https://github.com/John15321/proc-opt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = [
  "Jan Bronicki janbronicki@gmail.com",
  "Borys Staszczak staszczak.brys@gmail.com",
  "Patryk Marciniak patryknmarciniak@gmail.com",
]

[dependencies]

[dev-dependencies]
